--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <br>
   <br>
 
-  <footer class="footer">Created by <a href="https://github.com/BillRmz">Bill Ramirez</a> devChallenges.io</footer>
+  <footer class="footer">Created by <a href="https://billrmz.github.io/portfolio/">Bill Ramirez</a> devChallenges.io</footer>
   <script src="https://kit.fontawesome.com/1ce8ca0f03.js" crossorigin="anonymous"></script>
   <script src="menu.js"></script>
 </body>
